--- a/src/CSS/countryzz.css
+++ b/src/CSS/countryzz.css
@@ -41,7 +41,7 @@
 .world-info {
   display: flex;
   flex-direction: column;
-
+  width: 50%;
   /* padding-top: 2rem; */
   text-align: center;
   color: white;
@@ -54,6 +54,7 @@
   color: #000;
   font-family: 'lato', sans-serif;
   padding: 4px;
+  overflow:auto;
 }
 
 .world-cases-value {
